fix: resolve problem with non-fixed bg and solve frozen page when click on menu links on mobile

--- a/scss/blocks/_heading.scss
+++ b/scss/blocks/_heading.scss
@@ -1,10 +1,8 @@
 .heading {
   height: calc(100dvh - 80px);
   position: relative;
-  //todo: uncommit this when push project to hosting
-  //background-image: url('/images/background/heading-bg.webp');
-  // and remove row under:
   background-image: url('../images/background/heading-bg.webp');
+  background-attachment: fixed;
   background-size: cover;
   background-position: center;
 
